Adding buttons and beginning setup of background

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -10,6 +10,17 @@
 <body>
     <main>
         <h1>Trading System</h1>
+        <section class="buttons">
+            <div id="button1">
+                <button id="portfolio__management">Portfolio Management</button>    
+            </div>
+            <div id="button2">
+                <button id="market__management">Market Management</button>  
+            </div>
+            <div id="button3">
+                <button id="wallet">Wallet</button> 
+            </div>
+        </section>
     </main>
     <script scr="script.js"></script>
 </body>
