Adding link to one button. Increasing click range

--- a/Frontend/home.html
+++ b/Frontend/home.html
@@ -12,7 +12,7 @@
         <h1>Trading System</h1>
         <section class="buttons">
             <div id="button1">
-                <button id="portfolio__management"><a href="market_management.html">Portfolio Management</a></button>    
+                <button id="portfolio__management"><a id="market_link" href="market_management.html">Portfolio Management</a></button>    
             </div>
             <div id="button2">
                 <button id="market__management">Market Management</button>  
