Adding furthermore responsiveness to buttons

--- a/Frontend/home.html
+++ b/Frontend/home.html
@@ -12,13 +12,13 @@
         <h1>Trading System</h1>
         <section class="buttons">
             <div id="button1">
-                <button id="portfolio__management"><a id="market_link" href="market_management.html">Portfolio Management</a></button>    
+                <button id="portfolio__management"><a id="portfolio_link" href="portfolio_management.html">Portfolio Management</a></button>    
             </div>
             <div id="button2">
-                <button id="market__management">Market Management</button>  
+                <button id="market__management"><a id="market_link" href="market_management.html">Market Management</a></button>  
             </div>
             <div id="button3">
-                <button id="wallet">Wallet</button> 
+                <button id="wallet"><a id="wallet_link" href="wallet.html">Wallet</a></button> 
             </div>
         </section>
     </main>
