Adding comments to code

--- a/Frontend/home.html
+++ b/Frontend/home.html
@@ -5,13 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stock Trading</title>
+    <!--Adding in a style sheet for the html file--> 
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
     <main>
         <h1>Trading System</h1>
+        <!--declare a class that allows me to edit all buttons. Each have individual ID--> 
         <section class="buttons">
             <div id="button1">
+                <!--Use anchor to make the buttons links to other pages--> 
                 <button id="portfolio__management"><a id="portfolio_link" href="portfolio_management.html">Portfolio Management</a></button>    
             </div>
             <div id="button2">
