Changing file locations

--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stock Trading</title>
     <!--Adding in a style sheet for the html file--> 
-    <link rel="stylesheet" href="/Frontend/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
     <main>
@@ -25,6 +25,6 @@
             </div>
         </section>
     </main>
-    <script scr="/Frontend/index.js"></script>
+    <script scr="index.js"></script>
 </body>
 </html>
